# SummarizeAnnualReports

./: README.md  costPrediction.py  summarizeAnnual.py
dependencies/: .env  pyproject.toml
