[project]
name = "summarizeannualreports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "markdown2>=2.5.4",
    "pydantic>=2.11.7",
    "pypdf2>=3.0.1",
    "weasyprint>=66.0",
]
